--- a/Dashboard.html
+++ b/Dashboard.html
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="Dashboard.css">
   <title>User Dashboard</title>
 </head>
-<h2>Welcome, S.Rajit</h2>
+<h2>Welcome</h2>
 <p>This is your personal dashboard.</p>
 
 <section class="dashboard-section">
