Update script source from Assignment3 to Dashboard

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -45,4 +45,4 @@
         <li><a href="/faq">Visit FAQ</a></li>
     </ul>
 </section>
-<script src="Assignment3(Dashboard).js"></script>
+<script src="Dashboard.js"></script>
